@@ -1,3 +1,10 @@
+2012-04-26  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* elf32-m68k.c (elf_m68k_check_relocs): Mark non-GOT references
+	also when generating PIE.
+	(elf_m68k_discard_copies): Mark undefined weak symbols referenced
+	by relocations as dynamic.
+
 2012-04-26  Hans-Peter Nilsson  <hp@axis.com>
 
 	Provide a way for programs to recognize BFD_ASSERT calls.
